trying to fix X overflow on mobile

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -66,6 +66,9 @@
 .p08 {
     padding: 0.8em;
 }
+.margin-auto {
+    margin: 0 auto;
+}
 .top_bottom-p1 {
     padding: 1em 0;
 }
@@ -278,7 +281,6 @@ body {
 .icon {
     width: 90px;
     height: auto;
-    margin: 2em 0 0 2em;
     &_title {
         display: flex;
         align-items: center;
@@ -494,6 +496,20 @@ body {
 //////// END CARDS ///////////////////
 
 ///////// FOOTER STUFF /////////////////
+.social_icons {
+    padding-top: 5em;
+    p {
+        text-align: center;
+        img {
+            max-width: 120px;
+        }
+    }
+}
+.footer {
+    .section_caption {
+        text-align: center;
+    }
+}
 .social-icon {
     transition: all 300ms ease;
     &:hover {
@@ -572,6 +588,13 @@ body {
 
 // Small devices (landscape phones, less than 768px)
 @media (max-width: 767.98px) {
+    .social_icons {
+        p {
+            img {
+                max-width: 80%;
+            }
+        }
+    }
 }
 
 @media (max-width: 575.98px) {
